deployment/sonarqube/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/sonarqube_spots-network: "true"
        io.kompose.service: db
    spec:
      containers:
      - env:
        - name: POSTGRES_PASSWORD
          value: sonar
        - name: POSTGRES_USER
          value: sonar
        image: postgres
        imagePullPolicy: ""
        name: db
        ports:
        - containerPort: 5432
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql
          name: postgresql
        - mountPath: /var/lib/postgresql/data
          name: postgresql-data
          subPath: pgdata
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: postgresql
        persistentVolumeClaim:
          claimName: postgresql
      - name: postgresql-data
        persistentVolumeClaim:
          claimName: postgresql-data
status: {}
