deployment/sonarqube/elastisearch.yaml
apiVersion: elasticsearch.k8s.elastic.co/v1
kind: Deployment
metadata:
  name: quickstart
spec:
  version: 7.12.1
  nodeSets:
  - name: default
    count: 3
    podTemplate:
      spec:
