deployment/sonarqube/sonarqube-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: sonarqube
  name: sonarqube
spec:
  version: 7.12.1
  nodeSets:
  - name: default
    count: 3
    podTemplate:
      spec:
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sonarqube
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/sonarqube_spots-network: "true"
        io.kompose.service: sonarqube
    spec:
      containers:
      - env:
        - name: SONAR_ES_BOOTSTRAP_CHECKS_DISABLE
          value: "true"
        - name: SONAR_JDBC_PASSWORD
          value: sonar
        - name: SONAR_JDBC_URL
          value: jdbc:postgresql://db:5432/sonar
        - name: SONAR_JDBC_USERNAME
          value: sonar
        image: sonarqube
        imagePullPolicy: ""
        name: sonarqube
        ports:
        - containerPort: 9000
        resources: {}
        volumeMounts:
        - mountPath: /opt/sonarqube/data
          name: sonarqube-data
        - mountPath: /opt/sonarqube/extensions
          name: sonarqube-extensions
        - mountPath: /opt/sonarqube/logs
          name: sonarqube-logs
        - mountPath: /opt/sonarqube/temp
          name: sonarqube-temp
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: sonarqube-data
        persistentVolumeClaim:
          claimName: sonarqube-data
      - name: sonarqube-extensions
        persistentVolumeClaim:
          claimName: sonarqube-extensions
      - name: sonarqube-logs
        persistentVolumeClaim:
          claimName: sonarqube-logs
      - name: sonarqube-temp
        persistentVolumeClaim:
          claimName: sonarqube-temp
status: {}
